# HackatonService

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.docker/nginx/: nginx.conf
.github/workflows/: HackatonService_CD.yaml  HackatonService_CI.yaml  django-test.yaml  test.txt
Hackaton/: admin.py  apps.py  errors.py  exceptions.py  managers.py  models.py  paginations.py  queries.py  serializers.py  tasks.py  tests.py  urls.py  views.py
Hackaton/migrations/: 0001_initial.py  0002_alter_hackaton_tracks.py  0002_hackaton_roles_hackaton_tracks.py  0002_rename_descriptionshort_hackaton_description_short.py  0002_team_owner.py  0003_hackaton_roles_hackaton_tracks.py  0003_remove_hackaton_tracks_track_hackaton.py  0003_team_invite.py  0004_alter_track_hackaton.py  0004_user_team_is_invited.py  0005_alter_hackaton_user_hackaton_and_more.py  0005_hackaton_descriptionshort_hackaton_grandprize_and_more.py  0006_alter_hackaton_user_unique_together.py
Hackaton_parser/: scrapy.cfg
Hackaton_parser/Hackaton_parser/: items.py  middlewares.py  pipelines.py  settings.py
Hackaton_parser/parser_result/: result_parse.json
Resume/: admin.py  models.py  serializers.py  urls.py  views.py
Resume/migrations/: 0001_initial.py  0002_alter_education_graduation.py  (+6 more)
Score/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/: .env.example  __init__.py  celery_app.py  settings.py  urls.py
recruto/: apps.py  urls.py  views.py
users/: admin.py  filters.py  models.py  queries.py  serializers.py  urls.py  views.py
(+24 files in other folders)
